--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,18 @@ spring.datasource.url=jdbc:mysql://localhost:3306/dec2022springboot?createDataba
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=GodisTrU4752&@
-
 spring.jpa.show-sql=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+#spring.mail.username=mr.java2022@gmail.com
+#spring.mail.password=ewcthquzxbwmitpe
+spring.mail.username=v637904@gmail.com
+spring.mail.password=niafqbggrhnvemlq
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
