--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.mail.properties.mail.smtp.writetimeout=8000
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+spring.data.mongodb.uri=mongodb+srv://root:rootroot@cluster0.7yyhy0v.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=Cluster0
